<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/edit"
        android:icon="@drawable/ic_edit"
        android:title="@string/title_edit"
        app:showAsAction="ifRoom|always"/>

    <item
        android:id="@+id/remove"
        android:icon="@drawable/ic_person_remove"
        android:title="@string/title_remove"
        app:showAsAction="ifRoom|always"/>

    <item
        android:id="@+id/assign_role"
        android:icon="@drawable/ic_manage_roles"
        android:title="@string/title_assign_role"
        app:showAsAction="ifRoom|always" />

    <item
        android:id="@+id/make_inactive"
        android:icon="@drawable/ic_person_off"
        android:title="@string/title_make_inactive"
        app:showAsAction="ifRoom|always"
        android:visible="true"/>

    <item
        android:id="@+id/make_active"
        android:icon="@drawable/ic_person_active"
        android:title="@string/title_make_active"
        app:showAsAction="ifRoom|always"
        android:visible="false"/>

</menu>