<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_home_outlined"
        android:title="@string/title_home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/warehouse"
        android:enabled="true"
        android:icon="@drawable/ic_warehouse_outline"
        android:title="@string/title_warehouse"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/orders"
        android:enabled="true"
        android:icon="@drawable/ic_list"
        android:title="@string/title_orders"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/more"
        android:enabled="true"
        android:icon="@drawable/ic_more_horizontal"
        android:title="@string/title_more"
        app:showAsAction="ifRoom" />

</menu>