<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_create_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_small"
        android:text="@string/text_item"
        app:icon="@drawable/ic_package" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_create_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_order"
        app:icon="@drawable/ic_receipt" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_create_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_small"
        android:text="@string/text_user"
        app:icon="@drawable/ic_manage_users" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:contentDescription="@string/content_description_fab_menu"
        app:srcCompat="@drawable/ic_close" />
</LinearLayout>