<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/margin_medium">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_organisation_role_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_small"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_organisation_role_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_organisation_role_name"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_small"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_description"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_product_permission"/>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.chip.ChipGroup
        style="@style/Widget.Material3.Chip.Filter"
        android:id="@+id/chip_group_role_permissions_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_order_permission"/>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.chip.ChipGroup
        style="@style/Widget.Material3.Chip.Filter"
        android:id="@+id/chip_group_role_permissions_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_user_permission"/>

    <com.google.android.material.chip.ChipGroup
        style="@style/Widget.Material3.Chip.Filter"
        android:id="@+id/chip_group_role_permissions_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/button_manage_organisation_role"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_normal"
        android:text="@string/text_save" />

</LinearLayout>
