<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/df">

    <Button
        style="@style/Widget.Material3.Button.TextButton.Icon"
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_small"
        android:layout_marginVertical="@dimen/margin_medium"
        android:text="@string/text_back"
        app:icon="@drawable/ic_keyboard_arrow_left" />

    <TextView
        android:id="@+id/text_view_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_back"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_extra_large"
        android:text="@string/text_forgot_password"
        android:textSize="@dimen/text_size_header_small" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_forgot_password"
        android:layout_marginHorizontal="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_extra_large"
        android:layout_marginBottom="@dimen/margin_extra_small"
        android:hint="@string/hint_email"
        app:errorEnabled="true"
        app:hintEnabled="true"
        app:startIconDrawable="@drawable/ic_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_send"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/text_input_email"
        android:layout_marginHorizontal="@dimen/margin_normal"
        android:text="@string/text_send" />

</RelativeLayout>
